--- a/Html/libraries.Mainlibrary.html
+++ b/Html/libraries.Mainlibrary.html
@@ -31,59 +31,59 @@
   <a id="806" class="Keyword">constructor</a> <a id="contract"></a><a id="818" href="libraries.Mainlibrary.html#818" class="InductiveConstructor">contract</a>
   <a id="829" class="Keyword">field</a>
     <a id="Contract.amount"></a><a id="839" href="libraries.Mainlibrary.html#839" class="Field">amount</a>       <a id="852" class="Symbol">:</a> <a id="854" href="basicDataStructure.html#378" class="Function">Amount</a>
-    <a id="Contract.fun"></a><a id="865" href="libraries.Mainlibrary.html#865" class="Field">fun</a>          <a id="878" class="Symbol">:</a> <a id="880" href="basicDataStructure.html#190" class="Function">FunctionName</a> <a id="893" class="Symbol">→</a> <a id="895" class="Symbol">(</a><a id="896" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="900" class="Symbol">→</a> <a id="902" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContractExec</a> <a id="920" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="923" class="Symbol">)</a>  
-    <a id="Contract.purefunction"></a><a id="931" href="libraries.Mainlibrary.html#931" class="Field">purefunction</a> <a id="944" class="Symbol">:</a> <a id="946" href="basicDataStructure.html#190" class="Function">FunctionName</a> <a id="959" class="Symbol">→</a> <a id="961" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="965" class="Symbol">→</a> <a id="967" href="basicDataStructure.html#1431" class="Datatype">MsgOrError</a>
-<a id="978" class="Keyword">open</a> <a id="983" href="libraries.Mainlibrary.html#783" class="Module">Contract</a> <a id="992" class="Keyword">public</a>
+    <a id="Contract.fun"></a><a id="865" href="libraries.Mainlibrary.html#865" class="Field">fun</a>          <a id="878" class="Symbol">:</a> <a id="880" href="basicDataStructure.html#190" class="Function">FunctionName</a> <a id="893" class="Symbol">→</a> <a id="895" class="Symbol">(</a><a id="896" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="900" class="Symbol">→</a> <a id="902" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContract</a> <a id="916" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="919" class="Symbol">)</a>  
+    <a id="Contract.purefunction"></a><a id="927" href="libraries.Mainlibrary.html#927" class="Field">purefunction</a> <a id="940" class="Symbol">:</a> <a id="942" href="basicDataStructure.html#190" class="Function">FunctionName</a> <a id="955" class="Symbol">→</a> <a id="957" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="961" class="Symbol">→</a> <a id="963" href="basicDataStructure.html#1431" class="Datatype">MsgOrError</a>
+<a id="974" class="Keyword">open</a> <a id="979" href="libraries.Mainlibrary.html#783" class="Module">Contract</a> <a id="988" class="Keyword">public</a>
 
 
 
 
-<a id="1003" class="Comment">--ledger</a>
-<a id="Ledger"></a><a id="1012" href="libraries.Mainlibrary.html#1012" class="Function">Ledger</a> <a id="1019" class="Symbol">:</a> <a id="1021" href="Agda.Primitive.html#326" class="Primitive">Set</a>
-<a id="1025" href="libraries.Mainlibrary.html#1012" class="Function">Ledger</a> <a id="1032" class="Symbol">=</a> <a id="1034" href="basicDataStructure.html#405" class="Function">Address</a>  <a id="1043" class="Symbol">→</a> <a id="1045" href="libraries.Mainlibrary.html#783" class="Record">Contract</a>
+<a id="999" class="Comment">--ledger</a>
+<a id="Ledger"></a><a id="1008" href="libraries.Mainlibrary.html#1008" class="Function">Ledger</a> <a id="1015" class="Symbol">:</a> <a id="1017" href="Agda.Primitive.html#326" class="Primitive">Set</a>
+<a id="1021" href="libraries.Mainlibrary.html#1008" class="Function">Ledger</a> <a id="1028" class="Symbol">=</a> <a id="1030" href="basicDataStructure.html#405" class="Function">Address</a>  <a id="1039" class="Symbol">→</a> <a id="1041" href="libraries.Mainlibrary.html#783" class="Record">Contract</a>
 
 
 
-<a id="1057" class="Comment">-- the execution stack element</a>
-<a id="1088" class="Keyword">record</a> <a id="ExecStackEl"></a><a id="1095" href="libraries.Mainlibrary.html#1095" class="Record">ExecStackEl</a> <a id="1107" class="Symbol">:</a> <a id="1109" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="1113" class="Keyword">where</a>
-  <a id="1121" class="Keyword">constructor</a> <a id="execStackEl"></a><a id="1133" href="libraries.Mainlibrary.html#1133" class="InductiveConstructor">execStackEl</a>
-  <a id="1147" class="Keyword">field</a>
-    <a id="ExecStackEl.lastCallAddress"></a><a id="1157" href="libraries.Mainlibrary.html#1157" class="Field">lastCallAddress</a> <a id="1173" class="Symbol">:</a> <a id="1175" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1185" class="Comment">-- the address which made the call to the current function call</a>
-    <a id="ExecStackEl.calledAddress"></a><a id="1253" href="libraries.Mainlibrary.html#1253" class="Field">calledAddress</a>   <a id="1269" class="Symbol">:</a> <a id="1271" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1281" class="Comment">-- is the address to which the last current function call was made from lastCallAddr</a>
-    <a id="ExecStackEl.continuation"></a><a id="1370" href="libraries.Mainlibrary.html#1370" class="Field">continuation</a>    <a id="1386" class="Symbol">:</a> <a id="1388" class="Symbol">(</a><a id="1389" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1393" class="Symbol">→</a> <a id="1395" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContractExec</a> <a id="1413" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="1416" class="Symbol">)</a> <a id="1418" class="Comment">-- continuation how to proceed once a result is returned, which depends on that result which is an element of Msg</a>
-    <a id="ExecStackEl.costCont"></a><a id="1536" href="libraries.Mainlibrary.html#1536" class="Field">costCont</a>  <a id="1546" class="Symbol">:</a> <a id="1548" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1552" class="Symbol">→</a> <a id="1554" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a> <a id="1556" class="Comment">-- Cost for continuation depending on the msg returned when the current call is finished</a>
-                          <a id="1671" class="Comment">-- The following two elements are only for debugging purposes so that in case of an error</a>
-    <a id="ExecStackEl.funcNameexecStackEl"></a><a id="1765" href="libraries.Mainlibrary.html#1765" class="Field">funcNameexecStackEl</a>  <a id="1786" class="Symbol">:</a> <a id="1788" href="basicDataStructure.html#190" class="Function">FunctionName</a>     <a id="1805" class="Comment">--functionanme is the name of the function which was called</a>
+<a id="1053" class="Comment">-- the execution stack element</a>
+<a id="1084" class="Keyword">record</a> <a id="ExecStackEl"></a><a id="1091" href="libraries.Mainlibrary.html#1091" class="Record">ExecStackEl</a> <a id="1103" class="Symbol">:</a> <a id="1105" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="1109" class="Keyword">where</a>
+  <a id="1117" class="Keyword">constructor</a> <a id="execStackEl"></a><a id="1129" href="libraries.Mainlibrary.html#1129" class="InductiveConstructor">execStackEl</a>
+  <a id="1143" class="Keyword">field</a>
+    <a id="ExecStackEl.lastCallAddress"></a><a id="1153" href="libraries.Mainlibrary.html#1153" class="Field">lastCallAddress</a> <a id="1169" class="Symbol">:</a> <a id="1171" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1181" class="Comment">-- the address which made the call to the current function call</a>
+    <a id="ExecStackEl.calledAddress"></a><a id="1249" href="libraries.Mainlibrary.html#1249" class="Field">calledAddress</a>   <a id="1265" class="Symbol">:</a> <a id="1267" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1277" class="Comment">-- is the address to which the last current function call was made from lastCallAddr</a>
+    <a id="ExecStackEl.continuation"></a><a id="1366" href="libraries.Mainlibrary.html#1366" class="Field">continuation</a>    <a id="1382" class="Symbol">:</a> <a id="1384" class="Symbol">(</a><a id="1385" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1389" class="Symbol">→</a> <a id="1391" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContract</a> <a id="1405" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="1408" class="Symbol">)</a> <a id="1410" class="Comment">-- continuation how to proceed once a result is returned, which depends on that result which is an element of Msg</a>
+    <a id="ExecStackEl.costCont"></a><a id="1528" href="libraries.Mainlibrary.html#1528" class="Field">costCont</a>  <a id="1538" class="Symbol">:</a> <a id="1540" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1544" class="Symbol">→</a> <a id="1546" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a> <a id="1548" class="Comment">-- Cost for continuation depending on the msg returned when the current call is finished</a>
+                          <a id="1663" class="Comment">-- The following two elements are only for debugging purposes so that in case of an error</a>
+    <a id="ExecStackEl.funcNameexecStackEl"></a><a id="1757" href="libraries.Mainlibrary.html#1757" class="Field">funcNameexecStackEl</a>  <a id="1778" class="Symbol">:</a> <a id="1780" href="basicDataStructure.html#190" class="Function">FunctionName</a>     <a id="1797" class="Comment">--functionanme is the name of the function which was called</a>
 
-    <a id="ExecStackEl.msgexecStackEl"></a><a id="1870" href="libraries.Mainlibrary.html#1870" class="Field">msgexecStackEl</a>       <a id="1891" class="Symbol">:</a> <a id="1893" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1897" class="Comment">--msg is the arguments with which this funciton was called.</a>
-<a id="1957" class="Keyword">open</a> <a id="1962" href="libraries.Mainlibrary.html#1095" class="Module">ExecStackEl</a> <a id="1974" class="Keyword">public</a>
-
-
-
-<a id="1984" class="Comment">-- execution stack function</a>
-<a id="ExecutionStack"></a><a id="2012" href="libraries.Mainlibrary.html#2012" class="Function">ExecutionStack</a> <a id="2027" class="Symbol">:</a> <a id="2029" href="Agda.Primitive.html#326" class="Primitive">Set</a>
-<a id="2033" href="libraries.Mainlibrary.html#2012" class="Function">ExecutionStack</a> <a id="2048" class="Symbol">=</a> <a id="2050" href="Agda.Builtin.List.html#148" class="Datatype">List</a> <a id="2055" href="libraries.Mainlibrary.html#1095" class="Record">ExecStackEl</a>
+    <a id="ExecStackEl.msgexecStackEl"></a><a id="1862" href="libraries.Mainlibrary.html#1862" class="Field">msgexecStackEl</a>       <a id="1883" class="Symbol">:</a> <a id="1885" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1889" class="Comment">--msg is the arguments with which this funciton was called.</a>
+<a id="1949" class="Keyword">open</a> <a id="1954" href="libraries.Mainlibrary.html#1091" class="Module">ExecStackEl</a> <a id="1966" class="Keyword">public</a>
 
 
 
+<a id="1976" class="Comment">-- execution stack function</a>
+<a id="ExecutionStack"></a><a id="2004" href="libraries.Mainlibrary.html#2004" class="Function">ExecutionStack</a> <a id="2019" class="Symbol">:</a> <a id="2021" href="Agda.Primitive.html#326" class="Primitive">Set</a>
+<a id="2025" href="libraries.Mainlibrary.html#2004" class="Function">ExecutionStack</a> <a id="2040" class="Symbol">=</a> <a id="2042" href="Agda.Builtin.List.html#148" class="Datatype">List</a> <a id="2047" href="libraries.Mainlibrary.html#1091" class="Record">ExecStackEl</a>
 
 
-<a id="2072" class="Comment">-- the state execution function</a>
-<a id="2104" class="Keyword">record</a> <a id="StateExecFun"></a><a id="2111" href="libraries.Mainlibrary.html#2111" class="Record">StateExecFun</a> <a id="2124" class="Symbol">:</a> <a id="2126" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="2130" class="Keyword">where</a>
-  <a id="2138" class="Keyword">constructor</a> <a id="stateEF"></a><a id="2150" href="libraries.Mainlibrary.html#2150" class="InductiveConstructor">stateEF</a>
-  <a id="2160" class="Keyword">field</a>
-    <a id="StateExecFun.ledger"></a><a id="2170" href="libraries.Mainlibrary.html#2170" class="Field">ledger</a> <a id="2177" class="Symbol">:</a> <a id="2179" href="libraries.Mainlibrary.html#1012" class="Function">Ledger</a>
-    <a id="StateExecFun.executionStack"></a><a id="2190" href="libraries.Mainlibrary.html#2190" class="Field">executionStack</a> <a id="2205" class="Symbol">:</a> <a id="2207" href="libraries.Mainlibrary.html#2012" class="Function">ExecutionStack</a>
-    <a id="StateExecFun.initialAddr"></a><a id="2226" href="libraries.Mainlibrary.html#2226" class="Field">initialAddr</a> <a id="2238" class="Symbol">:</a>  <a id="2241" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2249" class="Comment">-- the address which initiated everything</a>
-    <a id="StateExecFun.lastCallAddr"></a><a id="2295" href="libraries.Mainlibrary.html#2295" class="Field">lastCallAddr</a>    <a id="2311" class="Symbol">:</a> <a id="2313" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2321" class="Comment">-- the address which made the call to the current function call</a>
-    <a id="StateExecFun.calledAddr"></a><a id="2389" href="libraries.Mainlibrary.html#2389" class="Field">calledAddr</a> <a id="2400" class="Symbol">:</a> <a id="2402" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="2412" class="Comment">-- is the address to which the last current fucntion call was made from lastCallAddr</a>
-    <a id="StateExecFun.nextstep"></a><a id="2501" href="libraries.Mainlibrary.html#2501" class="Field">nextstep</a>  <a id="2511" class="Symbol">:</a> <a id="2513" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContractExec</a> <a id="2531" href="basicDataStructure.html#523" class="Datatype">Msg</a>   <a id="2537" class="Comment">-- next step in the program to be executed when</a>
-    <a id="StateExecFun.gasLeft"></a><a id="2589" href="libraries.Mainlibrary.html#2589" class="Field">gasLeft</a>   <a id="2599" class="Symbol">:</a> <a id="2601" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a>  <a id="2604" class="Comment">-- how much we have left in the next execution step</a>
 
-<a id="2657" class="Comment">--these info regarding debug info :</a>
 
-    <a id="StateExecFun.funNameevalState"></a><a id="2698" href="libraries.Mainlibrary.html#2698" class="Field">funNameevalState</a> <a id="2715" class="Symbol">:</a> <a id="2717" href="basicDataStructure.html#190" class="Function">FunctionName</a>
-    <a id="StateExecFun.msgevalState"></a><a id="2734" href="libraries.Mainlibrary.html#2734" class="Field">msgevalState</a> <a id="2747" class="Symbol">:</a> <a id="2749" href="basicDataStructure.html#523" class="Datatype">Msg</a>
-<a id="2753" class="Keyword">open</a> <a id="2758" href="libraries.Mainlibrary.html#2111" class="Module">StateExecFun</a> <a id="2771" class="Keyword">public</a>
+
+<a id="2064" class="Comment">-- the state execution function</a>
+<a id="2096" class="Keyword">record</a> <a id="StateExecFun"></a><a id="2103" href="libraries.Mainlibrary.html#2103" class="Record">StateExecFun</a> <a id="2116" class="Symbol">:</a> <a id="2118" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="2122" class="Keyword">where</a>
+  <a id="2130" class="Keyword">constructor</a> <a id="stateEF"></a><a id="2142" href="libraries.Mainlibrary.html#2142" class="InductiveConstructor">stateEF</a>
+  <a id="2152" class="Keyword">field</a>
+    <a id="StateExecFun.ledger"></a><a id="2162" href="libraries.Mainlibrary.html#2162" class="Field">ledger</a> <a id="2169" class="Symbol">:</a> <a id="2171" href="libraries.Mainlibrary.html#1008" class="Function">Ledger</a>
+    <a id="StateExecFun.executionStack"></a><a id="2182" href="libraries.Mainlibrary.html#2182" class="Field">executionStack</a> <a id="2197" class="Symbol">:</a> <a id="2199" href="libraries.Mainlibrary.html#2004" class="Function">ExecutionStack</a>
+    <a id="StateExecFun.initialAddr"></a><a id="2218" href="libraries.Mainlibrary.html#2218" class="Field">initialAddr</a> <a id="2230" class="Symbol">:</a>  <a id="2233" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2241" class="Comment">-- the address which initiated everything</a>
+    <a id="StateExecFun.lastCallAddr"></a><a id="2287" href="libraries.Mainlibrary.html#2287" class="Field">lastCallAddr</a>    <a id="2303" class="Symbol">:</a> <a id="2305" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2313" class="Comment">-- the address which made the call to the current function call</a>
+    <a id="StateExecFun.calledAddr"></a><a id="2381" href="libraries.Mainlibrary.html#2381" class="Field">calledAddr</a> <a id="2392" class="Symbol">:</a> <a id="2394" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="2404" class="Comment">-- is the address to which the last current fucntion call was made from lastCallAddr</a>
+    <a id="StateExecFun.nextstep"></a><a id="2493" href="libraries.Mainlibrary.html#2493" class="Field">nextstep</a>  <a id="2503" class="Symbol">:</a> <a id="2505" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContract</a> <a id="2519" href="basicDataStructure.html#523" class="Datatype">Msg</a>   <a id="2525" class="Comment">-- next step in the program to be executed when</a>
+    <a id="StateExecFun.gasLeft"></a><a id="2577" href="libraries.Mainlibrary.html#2577" class="Field">gasLeft</a>   <a id="2587" class="Symbol">:</a> <a id="2589" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a>  <a id="2592" class="Comment">-- how much we have left in the next execution step</a>
+
+<a id="2645" class="Comment">--these info regarding debug info :</a>
+
+    <a id="StateExecFun.funNameevalState"></a><a id="2686" href="libraries.Mainlibrary.html#2686" class="Field">funNameevalState</a> <a id="2703" class="Symbol">:</a> <a id="2705" href="basicDataStructure.html#190" class="Function">FunctionName</a>
+    <a id="StateExecFun.msgevalState"></a><a id="2722" href="libraries.Mainlibrary.html#2722" class="Field">msgevalState</a> <a id="2735" class="Symbol">:</a> <a id="2737" href="basicDataStructure.html#523" class="Datatype">Msg</a>
+<a id="2741" class="Keyword">open</a> <a id="2746" href="libraries.Mainlibrary.html#2103" class="Module">StateExecFun</a> <a id="2759" class="Keyword">public</a>
 
 </pre></body></html>
