--- a/Html/guidelines.html
+++ b/Html/guidelines.html
@@ -57,14 +57,17 @@
 
 <a id="1367" class="Keyword">open</a> <a id="1372" class="Keyword">import</a> <a id="1379" href="Complex-Model.IOledger.IOledger-votingexample.html" class="Module">Complex-Model.IOledger.IOledger-votingexample</a>
 
-<a id="1426" class="Comment">--Ledger</a>
+<a id="1426" class="Comment">-- definition of Smart Contract (SmartContract), Commands (CCommands), and respones (CResponse)</a>
+<a id="1522" class="Keyword">open</a> <a id="1527" class="Keyword">import</a> <a id="1534" href="Simple-Model.ledgerversion.Ledger-Simple-Model.html" class="Module">Simple-Model.ledgerversion.Ledger-Simple-Model</a>
 
-<a id="1436" class="Keyword">open</a> <a id="1441" class="Keyword">import</a> <a id="1448" href="Complex-Model.ledgerversion.Ledger-Complex-Model.html" class="Module">Complex-Model.ledgerversion.Ledger-Complex-Model</a>
-<a id="1497" class="Keyword">open</a> <a id="1502" class="Keyword">import</a> <a id="1509" href="Complex-Model.ledgerversion.Ledger-Complex-Model-improved-non-terminate.html" class="Module">Complex-Model.ledgerversion.Ledger-Complex-Model-improved-non-terminate</a>
+<a id="1582" class="Comment">--Ledger</a>
 
-<a id="1582" class="Comment">-- commands and responses</a>
-<a id="1608" class="Keyword">open</a> <a id="1613" class="Keyword">import</a> <a id="1620" href="Complex-Model.ccomand.ccommands-cresponse.html" class="Module">Complex-Model.ccomand.ccommands-cresponse</a>
+<a id="1592" class="Keyword">open</a> <a id="1597" class="Keyword">import</a> <a id="1604" href="Complex-Model.ledgerversion.Ledger-Complex-Model.html" class="Module">Complex-Model.ledgerversion.Ledger-Complex-Model</a>
+<a id="1653" class="Keyword">open</a> <a id="1658" class="Keyword">import</a> <a id="1665" href="Complex-Model.ledgerversion.Ledger-Complex-Model-improved-non-terminate.html" class="Module">Complex-Model.ledgerversion.Ledger-Complex-Model-improved-non-terminate</a>
+
+<a id="1738" class="Comment">-- commands and responses</a>
+<a id="1764" class="Keyword">open</a> <a id="1769" class="Keyword">import</a> <a id="1776" href="Complex-Model.ccomand.ccommands-cresponse.html" class="Module">Complex-Model.ccomand.ccommands-cresponse</a>
 
 
-<a id="1664" class="Comment">-- Sect 5 CONCLUSION AND FUTURE WORK</a>
+<a id="1820" class="Comment">-- Sect 5 CONCLUSION AND FUTURE WORK</a>
 </pre></body></html>
