--- a/Html/libraries.Mainlibrary.html
+++ b/Html/libraries.Mainlibrary.html
@@ -31,59 +31,63 @@
   <a id="806" class="Keyword">constructor</a> <a id="contract"></a><a id="818" href="libraries.Mainlibrary.html#818" class="InductiveConstructor">contract</a>
   <a id="829" class="Keyword">field</a>
     <a id="Contract.amount"></a><a id="839" href="libraries.Mainlibrary.html#839" class="Field">amount</a>       <a id="852" class="Symbol">:</a> <a id="854" href="basicDataStructure.html#378" class="Function">Amount</a>
-    <a id="Contract.fun"></a><a id="865" href="libraries.Mainlibrary.html#865" class="Field">fun</a>          <a id="878" class="Symbol">:</a> <a id="880" href="basicDataStructure.html#190" class="Function">FunctionName</a> <a id="893" class="Symbol">→</a> <a id="895" class="Symbol">(</a><a id="896" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="900" class="Symbol">→</a> <a id="902" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContract</a> <a id="916" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="919" class="Symbol">)</a>  
-    <a id="Contract.purefunction"></a><a id="927" href="libraries.Mainlibrary.html#927" class="Field">purefunction</a> <a id="940" class="Symbol">:</a> <a id="942" href="basicDataStructure.html#190" class="Function">FunctionName</a> <a id="955" class="Symbol">→</a> <a id="957" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="961" class="Symbol">→</a> <a id="963" href="basicDataStructure.html#1431" class="Datatype">MsgOrError</a>
-<a id="974" class="Keyword">open</a> <a id="979" href="libraries.Mainlibrary.html#783" class="Module">Contract</a> <a id="988" class="Keyword">public</a>
+    <a id="Contract.fun"></a><a id="865" href="libraries.Mainlibrary.html#865" class="Field">fun</a>          <a id="878" class="Symbol">:</a> <a id="880" href="basicDataStructure.html#190" class="Function">FunctionName</a>
+       <a id="900" class="Symbol">→</a> <a id="902" class="Symbol">(</a><a id="903" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="907" class="Symbol">→</a> <a id="909" href="Complex-Model.ccomand.ccommands-cresponse.html#1546" class="Datatype">SmartContract</a> <a id="923" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="926" class="Symbol">)</a>  
+    <a id="Contract.purefunction"></a><a id="934" href="libraries.Mainlibrary.html#934" class="Field">purefunction</a> <a id="947" class="Symbol">:</a> <a id="949" href="basicDataStructure.html#190" class="Function">FunctionName</a>
+       <a id="969" class="Symbol">→</a> <a id="971" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="975" class="Symbol">→</a> <a id="977" href="basicDataStructure.html#1431" class="Datatype">MsgOrError</a>
+    <a id="Contract.purefunctionCost"></a><a id="992" href="libraries.Mainlibrary.html#992" class="Field">purefunctionCost</a> <a id="1009" class="Symbol">:</a> <a id="1011" href="basicDataStructure.html#190" class="Function">FunctionName</a>
+       <a id="1031" class="Symbol">→</a> <a id="1033" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1037" class="Symbol">→</a> <a id="1039" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a>
+<a id="1041" class="Keyword">open</a> <a id="1046" href="libraries.Mainlibrary.html#783" class="Module">Contract</a> <a id="1055" class="Keyword">public</a>
 
 
 
 
-<a id="999" class="Comment">--ledger</a>
-<a id="Ledger"></a><a id="1008" href="libraries.Mainlibrary.html#1008" class="Function">Ledger</a> <a id="1015" class="Symbol">:</a> <a id="1017" href="Agda.Primitive.html#326" class="Primitive">Set</a>
-<a id="1021" href="libraries.Mainlibrary.html#1008" class="Function">Ledger</a> <a id="1028" class="Symbol">=</a> <a id="1030" href="basicDataStructure.html#405" class="Function">Address</a>  <a id="1039" class="Symbol">→</a> <a id="1041" href="libraries.Mainlibrary.html#783" class="Record">Contract</a>
+<a id="1066" class="Comment">--ledger</a>
+<a id="Ledger"></a><a id="1075" href="libraries.Mainlibrary.html#1075" class="Function">Ledger</a> <a id="1082" class="Symbol">:</a> <a id="1084" href="Agda.Primitive.html#326" class="Primitive">Set</a>
+<a id="1088" href="libraries.Mainlibrary.html#1075" class="Function">Ledger</a> <a id="1095" class="Symbol">=</a> <a id="1097" href="basicDataStructure.html#405" class="Function">Address</a>  <a id="1106" class="Symbol">→</a> <a id="1108" href="libraries.Mainlibrary.html#783" class="Record">Contract</a>
 
 
 
-<a id="1053" class="Comment">-- the execution stack element</a>
-<a id="1084" class="Keyword">record</a> <a id="ExecStackEl"></a><a id="1091" href="libraries.Mainlibrary.html#1091" class="Record">ExecStackEl</a> <a id="1103" class="Symbol">:</a> <a id="1105" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="1109" class="Keyword">where</a>
-  <a id="1117" class="Keyword">constructor</a> <a id="execStackEl"></a><a id="1129" href="libraries.Mainlibrary.html#1129" class="InductiveConstructor">execStackEl</a>
-  <a id="1143" class="Keyword">field</a>
-    <a id="ExecStackEl.lastCallAddress"></a><a id="1153" href="libraries.Mainlibrary.html#1153" class="Field">lastCallAddress</a> <a id="1169" class="Symbol">:</a> <a id="1171" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1181" class="Comment">-- the address which made the call to the current function call</a>
-    <a id="ExecStackEl.calledAddress"></a><a id="1249" href="libraries.Mainlibrary.html#1249" class="Field">calledAddress</a>   <a id="1265" class="Symbol">:</a> <a id="1267" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1277" class="Comment">-- is the address to which the last current function call was made from lastCallAddr</a>
-    <a id="ExecStackEl.continuation"></a><a id="1366" href="libraries.Mainlibrary.html#1366" class="Field">continuation</a>    <a id="1382" class="Symbol">:</a> <a id="1384" class="Symbol">(</a><a id="1385" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1389" class="Symbol">→</a> <a id="1391" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContract</a> <a id="1405" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="1408" class="Symbol">)</a> <a id="1410" class="Comment">-- continuation how to proceed once a result is returned, which depends on that result which is an element of Msg</a>
-    <a id="ExecStackEl.costCont"></a><a id="1528" href="libraries.Mainlibrary.html#1528" class="Field">costCont</a>  <a id="1538" class="Symbol">:</a> <a id="1540" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1544" class="Symbol">→</a> <a id="1546" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a> <a id="1548" class="Comment">-- Cost for continuation depending on the msg returned when the current call is finished</a>
-                          <a id="1663" class="Comment">-- The following two elements are only for debugging purposes so that in case of an error</a>
-    <a id="ExecStackEl.funcNameexecStackEl"></a><a id="1757" href="libraries.Mainlibrary.html#1757" class="Field">funcNameexecStackEl</a>  <a id="1778" class="Symbol">:</a> <a id="1780" href="basicDataStructure.html#190" class="Function">FunctionName</a>     <a id="1797" class="Comment">--functionanme is the name of the function which was called</a>
+<a id="1120" class="Comment">-- the execution stack element</a>
+<a id="1151" class="Keyword">record</a> <a id="ExecStackEl"></a><a id="1158" href="libraries.Mainlibrary.html#1158" class="Record">ExecStackEl</a> <a id="1170" class="Symbol">:</a> <a id="1172" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="1176" class="Keyword">where</a>
+  <a id="1184" class="Keyword">constructor</a> <a id="execStackEl"></a><a id="1196" href="libraries.Mainlibrary.html#1196" class="InductiveConstructor">execStackEl</a>
+  <a id="1210" class="Keyword">field</a>
+    <a id="ExecStackEl.lastCallAddress"></a><a id="1220" href="libraries.Mainlibrary.html#1220" class="Field">lastCallAddress</a> <a id="1236" class="Symbol">:</a> <a id="1238" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1248" class="Comment">-- the address which made the call to the current function call</a>
+    <a id="ExecStackEl.calledAddress"></a><a id="1316" href="libraries.Mainlibrary.html#1316" class="Field">calledAddress</a>   <a id="1332" class="Symbol">:</a> <a id="1334" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="1344" class="Comment">-- is the address to which the last current function call was made from lastCallAddr</a>
+    <a id="ExecStackEl.continuation"></a><a id="1433" href="libraries.Mainlibrary.html#1433" class="Field">continuation</a>    <a id="1449" class="Symbol">:</a> <a id="1451" class="Symbol">(</a><a id="1452" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1456" class="Symbol">→</a> <a id="1458" href="Complex-Model.ccomand.ccommands-cresponse.html#1546" class="Datatype">SmartContract</a> <a id="1472" href="basicDataStructure.html#523" class="Datatype">Msg</a><a id="1475" class="Symbol">)</a> <a id="1477" class="Comment">-- continuation how to proceed once a result is returned, which depends on that result which is an element of Msg</a>
+    <a id="ExecStackEl.costCont"></a><a id="1595" href="libraries.Mainlibrary.html#1595" class="Field">costCont</a>  <a id="1605" class="Symbol">:</a> <a id="1607" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1611" class="Symbol">→</a> <a id="1613" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a> <a id="1615" class="Comment">-- Cost for continuation depending on the msg returned when the current call is finished</a>
+                          <a id="1730" class="Comment">-- The following two elements are only for debugging purposes so that in case of an error</a>
+    <a id="ExecStackEl.funcNameexecStackEl"></a><a id="1824" href="libraries.Mainlibrary.html#1824" class="Field">funcNameexecStackEl</a>  <a id="1845" class="Symbol">:</a> <a id="1847" href="basicDataStructure.html#190" class="Function">FunctionName</a>     <a id="1864" class="Comment">--functionanme is the name of the function which was called</a>
 
-    <a id="ExecStackEl.msgexecStackEl"></a><a id="1862" href="libraries.Mainlibrary.html#1862" class="Field">msgexecStackEl</a>       <a id="1883" class="Symbol">:</a> <a id="1885" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1889" class="Comment">--msg is the arguments with which this funciton was called.</a>
-<a id="1949" class="Keyword">open</a> <a id="1954" href="libraries.Mainlibrary.html#1091" class="Module">ExecStackEl</a> <a id="1966" class="Keyword">public</a>
-
-
-
-<a id="1976" class="Comment">-- execution stack function</a>
-<a id="ExecutionStack"></a><a id="2004" href="libraries.Mainlibrary.html#2004" class="Function">ExecutionStack</a> <a id="2019" class="Symbol">:</a> <a id="2021" href="Agda.Primitive.html#326" class="Primitive">Set</a>
-<a id="2025" href="libraries.Mainlibrary.html#2004" class="Function">ExecutionStack</a> <a id="2040" class="Symbol">=</a> <a id="2042" href="Agda.Builtin.List.html#148" class="Datatype">List</a> <a id="2047" href="libraries.Mainlibrary.html#1091" class="Record">ExecStackEl</a>
+    <a id="ExecStackEl.msgexecStackEl"></a><a id="1929" href="libraries.Mainlibrary.html#1929" class="Field">msgexecStackEl</a>       <a id="1950" class="Symbol">:</a> <a id="1952" href="basicDataStructure.html#523" class="Datatype">Msg</a> <a id="1956" class="Comment">--msg is the arguments with which this funciton was called.</a>
+<a id="2016" class="Keyword">open</a> <a id="2021" href="libraries.Mainlibrary.html#1158" class="Module">ExecStackEl</a> <a id="2033" class="Keyword">public</a>
 
 
 
+<a id="2043" class="Comment">-- execution stack function</a>
+<a id="ExecutionStack"></a><a id="2071" href="libraries.Mainlibrary.html#2071" class="Function">ExecutionStack</a> <a id="2086" class="Symbol">:</a> <a id="2088" href="Agda.Primitive.html#326" class="Primitive">Set</a>
+<a id="2092" href="libraries.Mainlibrary.html#2071" class="Function">ExecutionStack</a> <a id="2107" class="Symbol">=</a> <a id="2109" href="Agda.Builtin.List.html#148" class="Datatype">List</a> <a id="2114" href="libraries.Mainlibrary.html#1158" class="Record">ExecStackEl</a>
 
 
-<a id="2064" class="Comment">-- the state execution function</a>
-<a id="2096" class="Keyword">record</a> <a id="StateExecFun"></a><a id="2103" href="libraries.Mainlibrary.html#2103" class="Record">StateExecFun</a> <a id="2116" class="Symbol">:</a> <a id="2118" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="2122" class="Keyword">where</a>
-  <a id="2130" class="Keyword">constructor</a> <a id="stateEF"></a><a id="2142" href="libraries.Mainlibrary.html#2142" class="InductiveConstructor">stateEF</a>
-  <a id="2152" class="Keyword">field</a>
-    <a id="StateExecFun.ledger"></a><a id="2162" href="libraries.Mainlibrary.html#2162" class="Field">ledger</a> <a id="2169" class="Symbol">:</a> <a id="2171" href="libraries.Mainlibrary.html#1008" class="Function">Ledger</a>
-    <a id="StateExecFun.executionStack"></a><a id="2182" href="libraries.Mainlibrary.html#2182" class="Field">executionStack</a> <a id="2197" class="Symbol">:</a> <a id="2199" href="libraries.Mainlibrary.html#2004" class="Function">ExecutionStack</a>
-    <a id="StateExecFun.initialAddr"></a><a id="2218" href="libraries.Mainlibrary.html#2218" class="Field">initialAddr</a> <a id="2230" class="Symbol">:</a>  <a id="2233" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2241" class="Comment">-- the address which initiated everything</a>
-    <a id="StateExecFun.lastCallAddr"></a><a id="2287" href="libraries.Mainlibrary.html#2287" class="Field">lastCallAddr</a>    <a id="2303" class="Symbol">:</a> <a id="2305" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2313" class="Comment">-- the address which made the call to the current function call</a>
-    <a id="StateExecFun.calledAddr"></a><a id="2381" href="libraries.Mainlibrary.html#2381" class="Field">calledAddr</a> <a id="2392" class="Symbol">:</a> <a id="2394" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="2404" class="Comment">-- is the address to which the last current fucntion call was made from lastCallAddr</a>
-    <a id="StateExecFun.nextstep"></a><a id="2493" href="libraries.Mainlibrary.html#2493" class="Field">nextstep</a>  <a id="2503" class="Symbol">:</a> <a id="2505" href="Complex-Model.ccomand.ccommands-cresponse.html#1513" class="Datatype">SmartContract</a> <a id="2519" href="basicDataStructure.html#523" class="Datatype">Msg</a>   <a id="2525" class="Comment">-- next step in the program to be executed when</a>
-    <a id="StateExecFun.gasLeft"></a><a id="2577" href="libraries.Mainlibrary.html#2577" class="Field">gasLeft</a>   <a id="2587" class="Symbol">:</a> <a id="2589" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a>  <a id="2592" class="Comment">-- how much we have left in the next execution step</a>
 
-<a id="2645" class="Comment">--these info regarding debug info :</a>
 
-    <a id="StateExecFun.funNameevalState"></a><a id="2686" href="libraries.Mainlibrary.html#2686" class="Field">funNameevalState</a> <a id="2703" class="Symbol">:</a> <a id="2705" href="basicDataStructure.html#190" class="Function">FunctionName</a>
-    <a id="StateExecFun.msgevalState"></a><a id="2722" href="libraries.Mainlibrary.html#2722" class="Field">msgevalState</a> <a id="2735" class="Symbol">:</a> <a id="2737" href="basicDataStructure.html#523" class="Datatype">Msg</a>
-<a id="2741" class="Keyword">open</a> <a id="2746" href="libraries.Mainlibrary.html#2103" class="Module">StateExecFun</a> <a id="2759" class="Keyword">public</a>
+
+<a id="2131" class="Comment">-- the state execution function</a>
+<a id="2163" class="Keyword">record</a> <a id="StateExecFun"></a><a id="2170" href="libraries.Mainlibrary.html#2170" class="Record">StateExecFun</a> <a id="2183" class="Symbol">:</a> <a id="2185" href="Agda.Primitive.html#326" class="Primitive">Set</a> <a id="2189" class="Keyword">where</a>
+  <a id="2197" class="Keyword">constructor</a> <a id="stateEF"></a><a id="2209" href="libraries.Mainlibrary.html#2209" class="InductiveConstructor">stateEF</a>
+  <a id="2219" class="Keyword">field</a>
+    <a id="StateExecFun.ledger"></a><a id="2229" href="libraries.Mainlibrary.html#2229" class="Field">ledger</a> <a id="2236" class="Symbol">:</a> <a id="2238" href="libraries.Mainlibrary.html#1075" class="Function">Ledger</a>
+    <a id="StateExecFun.executionStack"></a><a id="2249" href="libraries.Mainlibrary.html#2249" class="Field">executionStack</a> <a id="2264" class="Symbol">:</a> <a id="2266" href="libraries.Mainlibrary.html#2071" class="Function">ExecutionStack</a>
+    <a id="StateExecFun.initialAddr"></a><a id="2285" href="libraries.Mainlibrary.html#2285" class="Field">initialAddr</a> <a id="2297" class="Symbol">:</a>  <a id="2300" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2308" class="Comment">-- the address which initiated everything</a>
+    <a id="StateExecFun.lastCallAddr"></a><a id="2354" href="libraries.Mainlibrary.html#2354" class="Field">lastCallAddr</a>    <a id="2370" class="Symbol">:</a> <a id="2372" href="basicDataStructure.html#405" class="Function">Address</a> <a id="2380" class="Comment">-- the address which made the call to the current function call</a>
+    <a id="StateExecFun.calledAddr"></a><a id="2448" href="libraries.Mainlibrary.html#2448" class="Field">calledAddr</a> <a id="2459" class="Symbol">:</a> <a id="2461" href="basicDataStructure.html#405" class="Function">Address</a>   <a id="2471" class="Comment">-- is the address to which the last current fucntion call was made from lastCallAddr</a>
+    <a id="StateExecFun.nextstep"></a><a id="2560" href="libraries.Mainlibrary.html#2560" class="Field">nextstep</a>  <a id="2570" class="Symbol">:</a> <a id="2572" href="Complex-Model.ccomand.ccommands-cresponse.html#1546" class="Datatype">SmartContract</a> <a id="2586" href="basicDataStructure.html#523" class="Datatype">Msg</a>   <a id="2592" class="Comment">-- next step in the program to be executed when</a>
+    <a id="StateExecFun.gasLeft"></a><a id="2644" href="libraries.Mainlibrary.html#2644" class="Field">gasLeft</a>   <a id="2654" class="Symbol">:</a> <a id="2656" href="Agda.Builtin.Nat.html#192" class="Datatype">ℕ</a>  <a id="2659" class="Comment">-- how much we have left in the next execution step</a>
+
+<a id="2712" class="Comment">--these info regarding debug info :</a>
+
+    <a id="StateExecFun.funNameevalState"></a><a id="2753" href="libraries.Mainlibrary.html#2753" class="Field">funNameevalState</a> <a id="2770" class="Symbol">:</a> <a id="2772" href="basicDataStructure.html#190" class="Function">FunctionName</a>
+    <a id="StateExecFun.msgevalState"></a><a id="2789" href="libraries.Mainlibrary.html#2789" class="Field">msgevalState</a> <a id="2802" class="Symbol">:</a> <a id="2804" href="basicDataStructure.html#523" class="Datatype">Msg</a>
+<a id="2808" class="Keyword">open</a> <a id="2813" href="libraries.Mainlibrary.html#2170" class="Module">StateExecFun</a> <a id="2826" class="Keyword">public</a>
 
 </pre></body></html>
