update readme file and Agda code

--- a/Html/guidelines.html
+++ b/Html/guidelines.html
@@ -74,17 +74,21 @@
 <a id="1928" class="Comment">-- ####################################</a>
 <a id="1968" class="Comment">-- For appendix to a simulator of Solidity-style smart contracts in the theorem prover Agda</a>
 
-<a id="2061" class="Comment">-- The appendix is available at this git repository</a>
-<a id="2113" class="Comment">-- (https://github.com/fahad1985lab/A_simulator_of_Solidity-style_smart_contracts_in_the_theorem_prover_Agda)</a>
+<a id="2061" class="Comment">-- The appendix is available at</a>
+<a id="2093" class="Comment">-- (https://github.com/fahad1985lab/A_simulator_of_Solidity-style_smart_contracts_in_the_theorem_prover_Agda/blob/main/Appendix_to_a_simulator_of_Solidity-style_smart_contracts_in_the_theorem_prover_Agda.pdf)</a>
 
-<a id="2224" class="Comment">-- A TRANSLATON OF SOLIDITY INTO AGDA</a>
-
-
-<a id="2264" class="Comment">-- A.1 Simple Simulator</a>
-<a id="2288" class="Keyword">open</a> <a id="2293" class="Keyword">import</a> <a id="2300" href="Simple-Model.example.solidityToagdaInsimplemodel-counterexample.html" class="Module">Simple-Model.example.solidityToagdaInsimplemodel-counterexample</a>
+<a id="2303" class="Comment">-- Git repository</a>
+<a id="2321" class="Comment">-- (https://github.com/fahad1985lab/A_simulator_of_Solidity-style_smart_contracts_in_the_theorem_prover_Agda)</a>
 
 
-<a id="2366" class="Comment">-- A.2 Complex simulator</a>
-<a id="2391" class="Keyword">open</a> <a id="2396" class="Keyword">import</a> <a id="2403" href="Complex-Model.example.solidityToagdaIncomplexmodel-votingexample.html" class="Module">Complex-Model.example.solidityToagdaIncomplexmodel-votingexample</a>
-<a id="2468" class="Keyword">open</a> <a id="2473" class="Keyword">import</a> <a id="2480" href="libraries.ComplexModelLibrary.html" class="Module">libraries.ComplexModelLibrary</a>
+<a id="2433" class="Comment">-- A TRANSLATON OF SOLIDITY INTO AGDA</a>
+
+
+<a id="2473" class="Comment">-- A.1 Simple Simulator</a>
+<a id="2497" class="Keyword">open</a> <a id="2502" class="Keyword">import</a> <a id="2509" href="Simple-Model.example.solidityToagdaInsimplemodel-counterexample.html" class="Module">Simple-Model.example.solidityToagdaInsimplemodel-counterexample</a>
+
+
+<a id="2575" class="Comment">-- A.2 Complex simulator</a>
+<a id="2600" class="Keyword">open</a> <a id="2605" class="Keyword">import</a> <a id="2612" href="Complex-Model.example.solidityToagdaIncomplexmodel-votingexample.html" class="Module">Complex-Model.example.solidityToagdaIncomplexmodel-votingexample</a>
+<a id="2677" class="Keyword">open</a> <a id="2682" class="Keyword">import</a> <a id="2689" href="libraries.ComplexModelLibrary.html" class="Module">libraries.ComplexModelLibrary</a>
 </pre></body></html>
